# simple_idealized_1d_nlse

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/txt/: breather.txt  modulation_instability.txt  single_soliton.txt  two_soliton.txt
configs/yaml/: breather.yaml  modulation_instability.yaml  single_soliton.yaml  two_soliton.yaml
src/simple_idealized_1d_nlse/: __init__.py  cli.py
src/simple_idealized_1d_nlse/core/: __init__.py  initial_conditions.py  solver.py
src/simple_idealized_1d_nlse/io/: __init__.py  config_manager.py  data_handler.py
src/simple_idealized_1d_nlse/utils/: __init__.py  logger.py  timer.py
src/simple_idealized_1d_nlse/visualization/: __init__.py  animator.py
